<resources>
    <string name="app_name">Rate My Driving</string>
    <string name="mainMenu_startDriving">START DRIVING!</string>
    <string name="mainMenu_history">History</string>
    <string name="mainMenu_about">About</string>
    <string name="mainMenu_settings">Settings</string>
    <string name="settingsMenu_displaySettings">Display settings</string>
    <string name="settingsMenu_regionalSettings">Regional settings</string>
    <string name="settingsMenu_allowGps">Allow GPS tracking</string>
    <string name="settingsMenu_powerSaving">Power saving</string>
    <string name="settingsMenu_language">Language</string>
    <string name="settingsMenu_speedUnit">Speed unit</string>
    <string name="settingsMenu_description_allowGps">Enable for GPS tracking</string>
    <string name="settingsMenu_description_powerSaving">Reduce battery usage</string>
    <string name="settingsMenu_description_language">Select preferred language</string>
    <string name="settingsMenu_description_speedUnit">Select preferred speed unit</string>
    <string name="settingsMenu_storageSettings">Storage settings</string>
    <string name="settingsMenu_saveAutomatically">Save journey automatically</string>
    <string name="settingsMenu_description_saveAutomatically">Save journey automatically when driving has finished</string>
    <string name="settingsMenu_accountSettings">Account settings</string>
    <string name="settingsMenu_signOut">Sign out</string>
    <string name="settingsMenu_signOutDescription">Currently signed in as\u0020</string>
    <string name="settingsMenu_signOutConfirmationTitle">Sign out</string>
    <string name="settingsMenu_signOutConfirmationDescription">Are you sure you want to sign out?</string>
    <string name="settingsMenu_deleteAccount">Delete account</string>
    <string name="settingsMenu_deleteAccountDescription">Permanently delete this account</string>
    <string name="settingsMenu_deleteAccountConfirmationTitle">Delete account</string>
    <string name="settingsMenu_deleteAccountConfirmationDescription">Are you sure you want to permanently delete your account? This action cannot be reversed!</string>
    <string name="driving_turnOnGps">Please enable your location. Press back to cancel.</string>
    <string name="calibrationInstructions_firstStep">Attach your device in a fixed position</string>
    <string name="calibrationInstructions_secondStep">Make sure your vehicle is not moving</string>
    <string name="calibrationInstructions_tapScreen">Tap the screen to start the calibration</string>
    <string name="calibration_calibrating">Calibrating...</string>
    <string name="calibration_dontDrive">Do not drive!</string>
    <string name="calibration_keepDeviceStill">Keep your device still!</string>
    <string name="calibration_calibrationDone">Calibration done!</string>
    <string name="calibration_driveFwd">Drive forward</string>
    <string name="journeyDetails_startTimestamp">Journey started:</string>
    <string name="journeyDetails_endTimestamp">Journey finished:</string>
    <string name="journeyDetails_startLocation">Starting point:</string>
    <string name="journeyDetails_endLocation">Ending point:</string>
    <string name="journeyDetails_maxSpeed">Maximum speed:</string>
    <string name="journeyDetails_avgSpeed">Average speed:</string>
    <string name="journeyDetails_saveJourney">Save journey</string>
    <string name="journeyDetails_generalInfo">General information</string>
    <string name="journeyDetails_gpsInfo">GPS information</string>
    <string name="journeyDetails_title">Journey details</string>
    <string name="journeyDetails_duration">Duration:</string>
    <string name="fileController_defaultFileName">journey</string>
    <string name="journeyDetails_alreadySaved">Journey has already been saved</string>
    <string name="journeyDetails_saving">Saving...</string>
    <string name="journeyDetails_saved">Journey saved</string>
    <string name="historyMenu_emptyList">No journeys available</string>
    <string name="historyActivity_deleteJourneyTitle">Delete journey</string>
    <string name="historyActivity_deleteJourneyMessage">Are you sure you want to delete journey</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="historyActivity_deleteToastPartOne">Journey</string>
    <string name="historyActivity_deleteToastPartTwo">deleted</string>
    <string name="historyMenu_menuItemDelete">Delete</string>
    <string name="historyMenu_menuItemRename">Rename</string>
    <string name="historyActivity_renameJourneyTitle">Rename journey</string>
    <string name="historyActivity_renameJourneyMessage">Please enter a new name for the journey</string>
    <string name="historyActivity_renameJourneyHint">New name</string>
    <string name="historyActivity_renameJourneyOk">Confirm</string>
    <string name="historyActivity_renameJourneyCancel">Cancel</string>
    <string name="historyActivity_renameJourneyToast">Journey renamed</string>
    <string name="historyActivity_renameJourneyNameExists">Name already exists. Choose another one</string>
    <string name="historyActivity_renameJourneyNameTooShort">Name should have at least 3 characters</string>
    <string name="historyActivity_renameJourneyNameTooLong">Name too long. Use maximum 25 characters</string>
    <string name="drivingActivity_time">Time:</string>
    <string name="drivingActivity_currSpeed">Current speed:</string>
    <string name="drivingActivity_maxSpeed">Max speed allowed:</string>
    <string name="drivingActivity_currentScore">Current score:</string>
    <string name="unavailable">Unavailable</string>
    <string name="drivingActivity_location">Location:</string>
    <string name="drivingActivity_averageRating">Road rating:</string>
    <string name="drivingActivity_averageRating_outOf">(out of</string>
    <string name="drivingActivity_averageRating_ratings"> ratings)</string>
    <string name="drivingActivity_slowDown">Slow Down!</string>
    <string name="drivingActivity_ratingGood">GOOD</string>
    <string name="drivingActivity_ratingMedium">MEDIUM</string>
    <string name="drivingActivity_ratingBad">BAD</string>
    <string name="drivingActivity_LEFT_TURN">LEFT TURN</string>
    <string name="drivingActivity_RIGHT_TURN">RIGHT TURN</string>
    <string name="drivingActivity_ACCELERATION">ACCELERATION</string>
    <string name="drivingActivity_BRAKING">BRAKE</string>
    <string name="drivingActivity_keepDriving">KEEP DRIVING</string>
    <string name="drivingActivity_drivingBetterThan">You\'re driving better than\u0020</string>
    <string name="drivingActivity_percentOfUsersOnRoad">% of all users on this road</string>
    <string name="drivingActivity_firstUserOnRoad">You\'re the first user driving on this road</string>
    <string name="drivingActivity_noInternetConnection">No internet connection</string>
    <string name="drivingActivity_noLocationAvailable">Location not available</string>
    <string name="journeyDetails_globalScore">Journey score:</string>
    <string name="historyItem_score">Score:</string>
    <string name="journeyDetails_viewInsightsButton">View Insights</string>
    <string name="journeyInsights_title">Journey insights</string>
    <string name="journeyInsights_headerGood">Good</string>
    <string name="journeyInsights_headereMedium">Medium</string>
    <string name="journeyInsights_headerBad">Bad</string>
    <string name="journeyInsights_headerTotal">Total</string>
    <string name="journeyInsights_leftTurns">Left turns</string>
    <string name="journeyInsights_rightTurns">Right turns</string>
    <string name="journeyInsights_accelerations">Accelerations</string>
    <string name="journeyInsights_Brakes">Brakes</string>
    <string name="journeyInsights_overspeedings">Speed exceeded:</string>
    <string name="journeyInsights_overspeedingTimes">times</string>
    <string name="journeyInsights_overspeedingDuration">Total overspeeding duration:</string>
    <string name="journeyInsights_goodPercentage">Percentage good:</string>
    <string name="journeyInsights_mediumPercentage">Percentage medium:</string>
    <string name="journeyInsights_badPercentage">Percentage bad:</string>
    <string name="mainMenu_gpsTrackingGranted">GPS tracking granted</string>
    <string name="settingsMenu_displayExtraPanel">Show information panel</string>
    <string name="settingsMenu_description_extraPanel">Enable for displaying location and speed information while driving</string>
    <string name="settingsMenu_languageRomanian">Romanian</string>
    <string name="settingsMenu_languageEnglish">English</string>
    <string name="settingsMenu_cancel">Cancel</string>
    <string name="aboutMenu_thankYouForUsing">Thank you for using Rate My Driving!</string>
    <string name="aboutMenu_firstParagraph">Before driving, make sure your phone is in a fixed position (preferably attached to a support). For better results, turn on the mobile data and location service on your device.</string>
    <string name="aboutMenu_secondParagraph">Tap <b>START DRIVING!</b> to start evaluating your driving style. Your device will be calibrated and then you shall drive forward.</string>
    <string name="aboutMenu_thirdParagraph">Rate My Driving will detect whenever you are accelerating, braking, turning left, turning right or overspeeding. These events will be given rating: <b><font color="#276b01">GOOD</font></b>, <b><font color="#a47800">MEDIUM</font></b> or <b><font color="#a40808">BAD</font></b>.</string>
    <string name="aboutMenu_forthParagraph">Your score will be calculated based on these ratings. The score is between <b>1</b> (worst) and <b>5</b>(best). Overspeeding for too long will add <b>penalties</b> to your score.</string>
    <string name="aboutActivity_fifthParagraph">When you want to finish your evaluation, simply tap the <b>back</b> button of your device. You will be given a set of details and insights about your journey. You can save the journey by tapping <b>Save journey</b>. \"</string>
    <string name="aboutActivity_sixthParagraph">See your saved journeys using the <b>HISTORY</b> menu. Tap and hold for <b>deleting</b> or <b>renaming</b> a journey. Set your preferences using the <b>SETTINGS</b> menu.</string>
    <string name="aboutMenu_safeJourney"><b>Have a safe journey!</b></string>
    <string name="aboutMenu_developer">Developer:</string>
    <string name="aboutMenu_contact">Contact:</string>
    <string name="aboutMenu_version">Version:</string>
    <string name="aboutMenu_credits">Many thanks to freeiconspng.com, icons8.com and clipartsuggest.com for the icons used within Rate My Driving.</string>
    <string name="drivingActivity_powerSaveOn">Power saving mode enabled</string>
    <string name="loginActivity_emailText">E-mail</string>
    <string name="loginActivity_passwordText">Password</string>
    <string name="loginActivity_loginButton">Login</string>
    <string name="loginActivity_registerButton">Create new account</string>
    <string name="login_forgotPassword">Forgot your password? Tap here!</string>
    <string name="login_or">or</string>
    <string name="loginActivity_pleaseFillInFields">Please fill in the required fields</string>
    <string name="loginActivity_passowrdLength">Password must be at least 6 characters long</string>
    <string name="loginActivity_wrongMailOrPass">Wrong e-mail or password</string>
    <string name="loginActivity_googleAuthError">Authentication error</string>
    <string name="resetPassword_requestNewPassButton">Request new password</string>
    <string name="resetPassword_pleaseFillEmail">Please enter account e-mail</string>
    <string name="resetPassword_successful">New password link sent to\u0020</string>
    <string name="resetPassword_fail">Wrong or inexistent e-mail address. Please try again.</string>
</resources>