<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#FFF">

    <ImageView
        android:id="@+id/splashImageId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/activity_vertical_margin_bigger"
        android:src="@drawable/splashratemydriving" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:hint="@string/loginActivity_emailText"
            android:id="@+id/login_emailField" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:id="@+id/login_passwordField"
            android:hint="@string/loginActivity_passwordText" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:text="@string/loginActivity_loginButton"
            android:id="@+id/login_loginButton"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorPrimary"/>

        <Button
            android:text="@string/loginActivity_registerButton"
            android:id="@+id/login_registerButton"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"/>
    </LinearLayout>

    <Button
        android:text="@string/login_forgotPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:id="@+id/login_forgotPasswordButton"
        android:background="@null"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_or"
        android:gravity="center"
        android:textColor="@color/colorPrimary"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_googleSignInButton"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        />



</LinearLayout>