<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.caiusf.ratemydriving.activities.MainMenuActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/colorMainMenu">

    <ImageView
        android:layout_width="237dp"
        android:layout_height="255dp"
        app:srcCompat="@drawable/car"
        android:id="@+id/carIconId"
        android:clickable="true"
        android:layout_gravity="center"></ImageView>

    <TextView
        android:text="@string/mainMenu_startDriving"
        android:gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textClickHereToStartId"
        android:textColor="@color/black"
        android:textStyle="normal|bold"
        android:clickable="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="83dp"
                android:layout_height="78dp"
                app:srcCompat="@drawable/document"
                android:id="@+id/historyIconId"
                android:layout_marginRight="35dp"
                android:layout_weight="3"
                android:clickable="true"
                 />

            <TextView
                android:text="@string/mainMenu_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textHistoryId"
                android:gravity="center"
                android:layout_alignRight="@+id/historyIconId"
                android:layout_alignEnd="@+id/historyIconId"
                android:layout_below="@+id/historyIconId"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="83dp"
                android:layout_height="78dp"
                app:srcCompat="@drawable/info"
                android:id="@+id/aboutIconId"
                android:layout_marginRight="35dp"
                android:layout_weight="3"
                android:clickable="true"
                />

            <TextView
                android:text="@string/mainMenu_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textAboutId"
                android:gravity="center"
                android:layout_alignRight="@+id/aboutIconId"
                android:layout_alignEnd="@+id/aboutIconId"
                android:layout_below="@+id/aboutIconId"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="83dp"
                android:layout_height="78dp"
                app:srcCompat="@drawable/settings"
                android:layout_weight="3"
                android:id="@+id/settingsIconId"
                android:clickable="true"/>

            <TextView
                android:text="@string/mainMenu_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textSettingsIds"
                android:gravity="center"
                android:layout_alignRight="@+id/settingsIconId"
                android:layout_alignEnd="@+id/settingsIconId"
                android:layout_below="@+id/settingsIconId"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
